adjust collision to be combined + fix selection for fence to render as ONE box